--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ dev = [
 llm = [
 	"requests>=2.31.0",
 ]
+vision = [
+	"mss>=9.0.0",
+	"Pillow>=10.0.0",
+	"numpy>=1.24.0",
+]
 voice = [
 	"requests>=2.31.0",
 	"numpy>=1.24.0",
