feat(system): Issue #12 - System Integration - Notifications, Shortcuts & Tray
- Add DBus notification listener (org.freedesktop.Notifications)
- Add global keyboard shortcuts with pynput (Ctrl+Alt+B, M, P, Q, etc.)
- Add system tray icon with PyQt5/pystray fallback
- Add auto-start configuration (~/.config/autostart/)
- Add XDG desktop integration (protocol handler, MIME types, icons)
- Add Mock classes for all components (testability)
- Add 72 comprehensive tests

Modules:
- notifications.py: NotificationListener, Notification, NotificationFilter
- shortcuts.py: GlobalShortcuts, ShortcutAction, ShortcutConfig
- tray.py: SystemTray, TrayStatus, TrayMenuItem
- autostart.py: AutoStart, AutoStartConfig
- desktop.py: DesktopIntegration, XDGPaths, MimeHandler

Closes #12

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,13 @@ voice = [
 	"pynput>=1.7.6",
 	"rapidfuzz>=3.6.0",
 ]
+system = [
+	"dbus-next>=0.2.3",
+	"pynput>=1.7.6",
+	"PyQt5>=5.15.0",
+	"pystray>=0.19.0",
+	"Pillow>=10.0.0",
+]
 
 [project.scripts]
 bantz = "bantz.cli:main"
