--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,12 @@ system = [
 	"pystray>=0.19.0",
 	"Pillow>=10.0.0",
 ]
+vision = [
+	"Pillow>=10.0.0",
+	"mss>=9.0.0",
+	"PyMuPDF>=1.24.0",
+	"pytesseract>=0.3.10",
+]
 
 [project.scripts]
 bantz = "bantz.cli:main"
