feat(security): Add security & privacy hardening module
Issue #15: Security & Privacy Hardening

Implemented comprehensive security module with:

## Encrypted Storage (storage.py)
- SecureStorage class with Fernet symmetric encryption (AES-128)
- SQLite backend for persistent encrypted data
- Key file protection (chmod 600)
- Key rotation support
- TTL-based expiration and cleanup
- MockSecureStorage for testing

## Permission System (permissions.py)
- 24 Permission types (FILE_READ, TERMINAL_EXECUTE, etc.)
- PermissionManager with grant/deny/revoke
- Resource pattern matching (glob patterns)
- One-time and time-limited grants
- User confirmation callbacks for dangerous ops
- Clear PermissionDeniedError messages
- MockPermissionManager for testing

## Audit Logging (audit.py)
- AuditEntry dataclass with full metadata
- AuditLogger with JSON-line file format
- Log rotation with gzip compression
- Query by time, action, actor, resource, outcome
- Export to JSON/CSV
- Statistics and analytics
- MockAuditLogger for testing

## Data Masking (masking.py)
- DataMasker with 14 default patterns
- Email, phone, credit card masking
- Password, API key, bearer token masking
- Turkish TC Kimlik No, SSN masking
- Sensitive field name detection
- Recursive dict/list masking
- MaskedLogger wrapper
- Custom pattern support

## Sandboxing (sandbox.py)
- Sandbox class with resource limits
- Configurable memory, CPU, time limits
- Temporary workspace isolation
- Command execution with timeout
- Python code execution
- RestrictedSandbox with blocked commands
- MockSandbox for testing

## Tests
- 81 new tests for security module
- 788 total tests passing

Closes #15

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ vision = [
 	"PyMuPDF>=1.24.0",
 	"pytesseract>=0.3.10",
 ]
+security = [
+	"cryptography>=42.0.0",
+]
 
 [project.scripts]
 bantz = "bantz.cli:main"
