fix(orchestrator): ASR returns tuple (text, meta) not object
- Fixed transcription result unpacking in _on_audio_captured
- ASR.transcribe() returns (text, meta) tuple, not object with .text attr

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ voice = [
 	"faster-whisper>=1.0.0",
 	"pynput>=1.7.6",
 	"rapidfuzz>=3.6.0",
+	"openwakeword>=0.6.0",
 ]
 system = [
 	"dbus-next>=0.2.3",
