--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ browser = [
 ]
 dev = [
 	"pytest>=7.4.0",
+	"pytest-asyncio>=0.23.0",
 	"tomli>=2.0.1",
 ]
 input = [
@@ -37,6 +38,11 @@ system = [
 	"pystray>=0.19.0",
 	"Pillow>=10.0.0",
 ]
+ui = [
+	"PyQt5>=5.15.0",
+	"pystray>=0.19.0",
+	"Pillow>=10.0.0",
+]
 vision = [
 	"Pillow>=10.0.0",
 	"mss>=9.0.0",
@@ -45,6 +51,19 @@ vision = [
 ]
 security = [
 	"cryptography>=42.0.0",
+]
+
+# Convenience meta extra for local dev installs.
+# Keep in sync with README.
+all = [
+	"bantz[browser]",
+	"bantz[dev]",
+	"bantz[input]",
+	"bantz[llm]",
+	"bantz[voice]",
+	"bantz[system]",
+	"bantz[vision]",
+	"bantz[security]",
 ]
 
 [project.scripts]
