--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -3,6 +3,7 @@ numpy>=1.24.0
 pynput>=1.7.6
 pyperclip>=1.8.2
 pytest>=7.4.0
+pytest-asyncio>=0.23.0
 rapidfuzz>=3.6.0
 requests>=2.31.0
 sounddevice>=0.4.6
