Docs: calendar smoke script + deps extras

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,12 @@ input = [
 llm = [
 	"requests>=2.31.0",
 ]
+
+calendar = [
+	"google-auth>=2.0.0",
+	"google-auth-oauthlib>=1.0.0",
+	"google-api-python-client>=2.0.0",
+]
 voice = [
 	"requests>=2.31.0",
 	"numpy>=1.24.0",
@@ -60,6 +66,7 @@ all = [
 	"bantz[dev]",
 	"bantz[input]",
 	"bantz[llm]",
+	"bantz[calendar]",
 	"bantz[voice]",
 	"bantz[system]",
 	"bantz[vision]",
