--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -1,9 +1,30 @@
+bantz[browser]
+bantz[calendar]
+bantz[dev]
+bantz[input]
+bantz[llm]
+bantz[security]
+bantz[system]
+bantz[vision]
+bantz[voice]
+cryptography>=42.0.0
+dbus-next>=0.2.3
 faster-whisper>=1.0.0
+google-api-python-client>=2.0.0
+google-auth-oauthlib>=1.0.0
+google-auth>=2.0.0
+mss>=9.0.0
 numpy>=1.24.0
+openwakeword>=0.6.0
+Pillow>=10.0.0
+PyMuPDF>=1.24.0
 pynput>=1.7.6
 pyperclip>=1.8.2
-pytest>=7.4.0
+PyQt5>=5.15.0
+pystray>=0.19.0
+pytesseract>=0.3.10
 pytest-asyncio>=0.23.0
+pytest>=7.4.0
 rapidfuzz>=3.6.0
 requests>=2.31.0
 sounddevice>=0.4.6
