feat(benchmark): Add comprehensive LLM orchestrator benchmarks (Issue #138)
- Add scripts/bench_llm_orchestrator.py: 800-line benchmarking harness
  - Measure latency (p50/p95/p99 ms), throughput (tokens/sec), success rate
  - Router benchmarks: 10 Turkish prompt scenarios
  - Orchestrator benchmarks: 5 full cycle scenarios
  - Chat benchmarks: 5 chat-only scenarios
  - Support vLLM vs Ollama backend comparison (--backend, --compare flags)
  - Generate markdown tables with winner/speedup analysis
  - JSON export for archival and trending
  - CLI flags: --iterations, --quick, --scenarios, --output-json, --output-md

- Add tests/test_benchmarks.py: 15 pytest tests with @pytest.mark.benchmark
  - TestOrchestratorPerformance: Baseline latency tests (<100ms with mock)
  - TestTokenUsage: Validates chat_detailed() token tracking
  - TestThroughput: Sequential throughput (>100 req/s)
  - TestSuccessRate: 100% success with mock LLM, JSON validity checks
  - TestPercentileCalculation: Validates p50/p95/p99 math
  - TestReportGeneration: JSON/markdown format validation
  - FastMockLLM implementation for baseline testing

- Update pytest.ini: Add 'benchmark' marker

Usage:
  # Quick benchmarks
  python scripts/bench_llm_orchestrator.py --backend ollama --quick

  # Full comparison (vLLM vs Ollama, 50 iterations per scenario)
  python scripts/bench_llm_orchestrator.py --compare --iterations 50

  # Run benchmark tests
  pytest tests/test_benchmarks.py -m benchmark

All 15 benchmark tests passing. Ready for vLLM vs Ollama comparison.

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,4 +4,5 @@ markers =
     asyncio: mark a test as using asyncio
     vllm: marks tests requiring vLLM server (deselect with '-m "not vllm"')
     integration: marks integration tests that may require external services
+    benchmark: marks performance benchmark tests (deselect with '-m "not benchmark"')
 asyncio_mode = auto
