--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -1,12 +1,4 @@
-bantz[browser]
-bantz[calendar]
-bantz[dev]
-bantz[input]
-bantz[llm]
-bantz[security]
-bantz[system]
-bantz[vision]
-bantz[voice]
+autoawq>=0.2.6
 cryptography>=42.0.0
 dbus-next>=0.2.3
 faster-whisper>=1.0.0
@@ -15,6 +7,7 @@ google-auth-oauthlib>=1.0.0
 google-auth>=2.0.0
 mss>=9.0.0
 numpy>=1.24.0
+openai>=1.40.0
 openwakeword>=0.6.0
 Pillow>=10.0.0
 PyMuPDF>=1.24.0
@@ -29,4 +22,7 @@ rapidfuzz>=3.6.0
 requests>=2.31.0
 sounddevice>=0.4.6
 tomli>=2.0.1
+torch>=2.4.0
+transformers>=4.45.0
+vllm>=0.6.0
 websockets>=11.0.0
