--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ vision = [
 	"mss>=9.0.0",
 	"PyMuPDF>=1.24.0",
 	"pytesseract>=0.3.10",
+	"google-auth>=2.0.0",
 ]
 security = [
 	"cryptography>=42.0.0",
@@ -103,6 +104,7 @@ all = [
 	"mss>=9.0.0",
 	"PyMuPDF>=1.24.0",
 	"pytesseract>=0.3.10",
+	"google-auth>=2.0.0",
 	"cryptography>=42.0.0",
 ]
 
