--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
 addopts = -ra
+testpaths = tests
 markers =
     asyncio: mark a test as using asyncio
     vllm: marks tests requiring vLLM server (deselect with '-m "not vllm"')
