Issue #260: eliminate skipped tests by default

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,8 +3,8 @@ addopts = -ra
 testpaths = tests
 markers =
     asyncio: mark a test as using asyncio
-    vllm: marks tests requiring vLLM server (deselect with '-m "not vllm"')
-    integration: marks integration tests that may require external services
-    benchmark: marks performance benchmark tests (deselect with '-m "not benchmark"')
-    regression: marks regression tests for CI (run with '-m regression')
+    vllm: marks tests that talk to a vLLM/OpenAI-compatible endpoint (run with --run-integration)
+    integration: marks integration tests that may require external services (run with --run-integration)
+    benchmark: marks performance benchmark tests (run with --run-benchmark)
+    regression: marks regression tests for CI (run with --run-regression)
 asyncio_mode = auto
