feat(#418): slim router JSON schema — reduce 3B output from ~200 to ~50 tokens
- Create src/bantz/brain/router_output_schema.py with two-tier schema
- Slim schema: route, intent, slots, confidence, tool_plan, gmail_intent (~50 tokens)
- Extended fields (assistant_reply, memory_update, reasoning_summary) filled by finalizer
- Update _SYSTEM_PROMPT_CORE to use slim OUTPUT SCHEMA
- Update examples to slim format (no reasoning_summary/confirmation_prompt)
- Increase router.max_tokens from 128 to 256 in model-settings.yaml
- RouterOutputSchema.fill_defaults() ensures OrchestratorOutput construction
- 42 tests covering schema tiers, validation, defaults, budget selection

Closes #418

--- a/config/model-settings.yaml
+++ b/config/model-settings.yaml
@@ -63,7 +63,7 @@ single_model:
 # =============================================================================
 router:
   temperature: 0.0  # Deterministic routing
-  max_tokens: 128   # Sufficient for JSON output
+  max_tokens: 256   # Issue #418: increased from 128 to avoid JSON truncation with slim schema
   top_p: 1.0
   stop_sequences:
     - "}"
