feat(#427): voice pipeline latency budget — per-phase tracking + degradation
- New src/bantz/core/latency_budget.py:
  - LatencyBudgetConfig (ASR 500ms, Router 100ms, Tool 1000ms, Finalizer 500ms, TTS 300ms)
  - Phase enum with 5 pipeline stages
  - DegradationAction enum (partial ASR, preroute cache, async tool, skip finalizer, cached TTS)
  - LatencyTracker with rolling window p50/p95 percentiles + dashboard export
  - PipelineRun/PhaseRecord data classes for per-utterance tracking
  - check_budget() one-shot helper, should_skip_finalizer() decision
  - load_budget_from_yaml() reads config/model-settings.yaml
- config/model-settings.yaml: Added voice_pipeline.latency_budget section
- src/bantz/conversation/orchestrator.py: Integrated LatencyTracker,
  per-phase router timing, latency dashboard in get_stats()
- 44 tests covering config, phases, percentiles, tracker, degradation,
  feedback phrases, YAML loading, orchestrator integration

--- a/config/model-settings.yaml
+++ b/config/model-settings.yaml
@@ -187,6 +187,25 @@ hardware:
     chat_p95_ms: 300
 
 # =============================================================================
+# Voice Pipeline Latency Budget (Issue #427)
+# =============================================================================
+# Per-phase budget for ASR → Router → Tool → Finalizer → TTS pipeline.
+# Used by src/bantz/core/latency_budget.py
+voice_pipeline:
+  latency_budget:
+    asr_max_ms: 500        # Whisper ASR timeout; fallback → partial result
+    router_max_ms: 100     # 3B router; fallback → pre-route cache
+    tool_max_ms: 1000      # Calendar/Gmail API; fallback → async + feedback phrase
+    finalizer_max_ms: 500  # Gemini quality pass; fallback → skip, use 3B
+    tts_max_ms: 300        # Piper TTS; fallback → pre-cached common phrases
+    end_to_end_max_ms: 2000  # Total pipeline target
+
+  # Feedback phrases injected when a phase blocks
+  feedback_phrases:
+    tool: "Bir bakayım efendim..."
+    finalizer: "Hemen söylüyorum..."
+
+# =============================================================================
 # Benchmarking Configuration
 # =============================================================================
 benchmark:
