feat(e2e): E2E test suite — golden tasks, mock LLM, regression detection
- E2ETestRunner framework with setup/teardown, send(), assertion helpers
- MockLLMProvider: deterministic responses from JSON fixtures
- 3 golden tasks: smalltalk (Turkish + efendim), calendar (create_event), sysinfo (system.info)
- TurnResult, TaskReport, E2EReport dataclasses
- Report generation to artifacts/results/e2e_report.json
- tests/fixtures/mock_llm_responses.json with golden scenarios
- pytest.ini: added e2e marker
- 21 tests — 9 golden task + 12 meta-tests for framework

Closes #463

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,4 +7,5 @@ markers =
     integration: marks integration tests that may require external services (run with --run-integration)
     benchmark: marks performance benchmark tests (run with --run-benchmark)
     regression: marks regression tests for CI (run with --run-regression)
+    e2e: marks end-to-end tests with mock LLM (run with pytest tests/e2e/)
 asyncio_mode = auto
