--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,13 @@ name = "bantz"
 version = "0.1.0"
 description = "Bantz - Local Jarvis (text-first)"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 authors = [{ name = "Bantz" }]
-dependencies = []
+dependencies = [
+	"requests>=2.31.0",
+	"openai>=1.40.0",
+	"pydantic>=2.0.0",
+]
 
 [project.optional-dependencies]
 browser = [
