fix: confirmation re-queue bug — confirmed tool was re-added to queue
When user confirmed a destructive tool (e.g. calendar.create_event),
_execute_tools_phase correctly popped it from pending_confirmations.
But then the pre-scan block saw an empty queue and immediately
re-queued the same tool, creating an infinite confirmation loop.

Fix: skip pre-scan when confirmed_override_tool is set.

Symptoms: user says evet → gets confirmation prompt again forever,
tool never actually executes, events never created.

--- a/config/bantz-env.example
+++ b/config/bantz-env.example
@@ -33,3 +33,4 @@ BANTZ_BRIEFING_HOUR=08
 # === Metrics ===
 BANTZ_METRICS_ENABLED=true
 BANTZ_LATENCY_BUDGET_MS=3000
+GEMINI_API_KEY=AIzaSyAmKjh0gVr0f3mdiktEYLm0oJHoOGerOzg
