fix: web search, gmail alias, TTFT, ask_user re-submit
web.search:
- Replace broken regex HTML parser with ddgs library (reliable API)
- Falls back to legacy scraping if ddgs unavailable
- Added ddgs>=7.0.0 to requirements-all.txt

gmail.smart_search 'Unknown field query':
- Root cause: tool_plan_with_args path skipped _build_tool_params(),
  so query→natural_query alias never ran
- Fix: apply critical field aliases AFTER both code paths merge

TTFT threshold:
- Raised router 800→1500ms, finalizer 1000→2000ms
- Appropriate for RTX 4060 + Gemini Flash network latency
- Eliminates terminal warning spam

ask_user re-submit:
- When router returns ask_user=True, store original user input in
  _pending_ask_user_input
- When user says 'evet' next turn (no pending confirmation), re-submit
  original text instead of bare 'evet'
- Fixes dead 'Tamam, anlaşıldı' responses after clarification questions

54 deselected tests:
- Confirmed: integration/benchmark/vllm markers, expected behavior
- Not hiding any bugs

E2E verified: web search returns real results, gmail has no field errors,
saat kaç works via preroute, confirmation fast-path works.
Tests: 7557 passed, 0 failed

--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -1,6 +1,7 @@
 autoawq>=0.2.6
 cryptography>=42.0.0
 dbus-next>=0.2.3
+ddgs>=7.0.0
 faster-whisper>=1.0.0
 google-api-python-client>=2.0.0
 google-auth-oauthlib>=1.0.0
