fix: eliminate 54 deselected tests and 116 warnings
- conftest.py: remove deselection logic — integration/vllm/benchmark/
  regression tests now run with the mock server or self-skip
- conftest.py: update mock server model name to Qwen2.5-3B-Instruct-AWQ
  to match VLLMOpenAIClient default
- orchestrator_loop.py: change 'no finalizer_llm' warnings.warn → logger.info
  (removes ~85 UserWarnings in tests)
- tool_timeout.py: close un-awaited coroutine when circuit breaker is open
  (fixes RuntimeWarning)
- test_plugins.py: add __test__ = False to TestPlugin class
  (fixes PytestCollectionWarning)
- test_issue_517_finalizer_invariant.py: adapt to logger.info (caplog)
- test_vllm_integration.py: always use mock server unless BANTZ_VLLM_URL set
- pytest.ini: add filterwarnings for websockets + google.api_core deprecations

Result: 7601 passed, 10 skipped, 0 failed, 0 deselected, 0 warnings

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,10 @@
 [pytest]
 addopts = -ra
 testpaths = tests
+filterwarnings =
+    ignore:websockets\..* is deprecated:DeprecationWarning
+    ignore:websockets\.legacy:DeprecationWarning
+    ignore::FutureWarning:google.api_core
 markers =
     asyncio: mark a test as using asyncio
     vllm: marks tests that talk to a vLLM/OpenAI-compatible endpoint (run with --run-integration)
