fix(tiering): enable tiering by default (BANTZ_TIER_MODE=True)
Closes #647

## Problem
BANTZ_TIER_MODE defaulted to False, which meant the tiering engine was
completely disabled unless the user explicitly set the env var. This caused
ALL requests — including complex writing tasks like email drafts and
roadmap planning — to be handled by the fast 3B model, silently degrading
output quality.

## Changes

### Core fix
- src/bantz/llm/tiered.py: Changed `_env_flag('BANTZ_TIER_MODE', default=False)`
  to `default=True` (and same for legacy alias BANTZ_TIERED_MODE).
  Updated docstring to reflect new default.

### Observability
- src/bantz/brain/finalization_pipeline.py: Added warning log when tiering is
  explicitly disabled via env, making it visible in logs.

### Config & Docs
- .env.example: Updated comment to reflect tiering is ON by default.
- config/bantz-env.example: Added tiering section with env var documentation.
- docs/setup/vllm.md: Updated tiered routing section — now documents how to
  disable (BANTZ_TIER_MODE=0) instead of how to enable.

### Tests
- tests/test_tiering_default_on_issue_647.py: 13 new tests covering:
  - _env_flag default=True behavior
  - decide_tier() returns non-disabled reason by default
  - Simple queries still route to fast tier
  - Complex writing escalates to quality tier
  - Explicit disable via BANTZ_TIER_MODE=0 works
  - Force tier bypass still works
- tests/test_quality_finalizer_issue_215.py: Fixed 2 tests that relied on
  delenv to disable tiering — now use explicit setenv('0') since default
  changed to True.

## Test Results
- 136 tiering-related tests: ALL PASSED
- Full suite: 18 failures (identical to dev branch — 0 regressions)

--- a/.env.example
+++ b/.env.example
@@ -59,7 +59,9 @@ VLLM_MODEL=Qwen/Qwen2.5-3B-Instruct
 # BANTZ_QUALITY_MODEL=gemini-2.0-flash
 # BANTZ_GEMINI_MODEL=gemini-2.0-flash
 
-# Enable tiered mode (auto-escalate complex requests)
+# Tiered mode is ON by default. Set to 0 to disable and always use fast tier.
+# BANTZ_TIER_MODE=1
+# Legacy alias:
 # BANTZ_TIERED_MODE=1
 
 # Force a specific tier: fast | quality | auto
