fix: normalize tiering envs + deterministic quality fallback (Issue #662)
Closes #662 — EPIC: Tiering & Cloud Finalizer

Changes:
- Introduced unified tier env helper (BANTZ_TIER_* only) with legacy deprecation warnings
- Tiering envs: BANTZ_TIER_MODE/ FORCE / FORCE_FINALIZER / DEBUG / METRICS
- Deterministic QUALITY→FAST fallback when cloud unavailable or 3B-only finalizer
- Tier decision trace: router/finalizer/reason recorded per turn
- /status now includes tiering section
- Updated bantz-env.example with new tiering vars and cloud mode

Tests:
- Added tests for legacy env warning, tier_decision trace, quality fallback, /status tiering
- Full regression: 8029 passed (0 failures)

--- a/config/bantz-env.example
+++ b/config/bantz-env.example
@@ -7,7 +7,8 @@ BANTZ_VLLM_MODEL=Qwen/Qwen2.5-3B-Instruct-AWQ
 
 # === Gemini (optional) ===
 # GEMINI_API_KEY=
-BANTZ_CLOUD_ENABLED=false
+# Cloud privacy mode: local | cloud
+BANTZ_CLOUD_MODE=local
 BANTZ_GEMINI_MODEL=gemini-2.0-flash
 
 # === Audio ===
@@ -35,6 +36,11 @@ BANTZ_BRIEFING_HOUR=08
 # BANTZ_TIER_MODE=1
 # Force tier: fast | quality | auto
 # BANTZ_TIER_FORCE=auto
+# Force finalizer tier: fast | quality | auto
+# BANTZ_TIER_FORCE_FINALIZER=auto
+# Tiering debug / metrics
+# BANTZ_TIER_DEBUG=0
+# BANTZ_TIER_METRICS=0
 
 # === Metrics ===
 BANTZ_METRICS_ENABLED=true
