--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
-blank_issues_enabled: true
+blank_issues_enabled: false
 contact_links:
-  - name: Security Vulnerability
+  - name: 🔒 Güvenlik Açığı Bildirimi
     url: https://github.com/miclaldogan/bantz/blob/dev/SECURITY.md
-    about: Report security vulnerabilities privately
-  - name: General Questions
+    about: Güvenlik açıklarını bu yol ile özel olarak bildirin
+  - name: 💬 Soru & Tartışma
     url: https://github.com/miclaldogan/bantz/discussions
-    about: Ask questions or discuss ideas
+    about: Soru sormak veya fikir paylaşmak için
