feat(api): REST API + HTTP server — dışarıdan HTTP erişimi (Issue #834)
## Yeni Özellikler

### HTTP REST API (FastAPI)
- POST /api/v1/chat — Brain pipeline üzerinden mesaj gönder/yanıt al
- GET  /api/v1/health — Sağlık kontrolü (brain, event_bus, vllm)
- GET  /api/v1/skills — Kayıtlı skill/tool listesi
- GET  /api/v1/notifications — SSE event stream (gerçek zamanlı)
- GET  /api/v1/inbox — Proaktif inbox snapshot
- POST /api/v1/inbox/{id}/read — Inbox öğesi okundu işaretle
- WS   /ws/chat — WebSocket bidirectional chat

### Authentication
- Bearer token auth via BANTZ_API_TOKEN env var
- Dev mode: token yoksa auth devre dışı
- Constant-time comparison (timing attack koruması)
- Security audit logging

### CLI Entegrasyonu
- bantz --serve --http — Interactive + HTTP API (port 8088)
- bantz --http-only — Sadece HTTP (headless deployment)
- --port, --http-host flags

### Dosya Değişiklikleri
- src/bantz/api/__init__.py — Modül tanımı
- src/bantz/api/server.py — FastAPI app factory + run_http_server
- src/bantz/api/auth.py — Bearer token middleware
- src/bantz/api/models.py — Pydantic request/response modelleri
- src/bantz/api/ws.py — WebSocket chat handler
- src/bantz/api/sse.py — SSE notification stream
- src/bantz/cli.py — --http, --port, --http-only flags
- requirements-http.txt — fastapi, uvicorn, sse-starlette
- requirements-all.txt — Updated
- tests/test_api_server.py — 70 tests

Closes #834

--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -2,6 +2,7 @@ autoawq>=0.2.6
 cryptography>=42.0.0
 dbus-next>=0.2.3
 faster-whisper>=1.0.0
+fastapi>=0.104.0
 google-api-python-client>=2.0.0
 google-auth-oauthlib>=1.0.0
 google-auth>=2.0.0
@@ -21,8 +22,10 @@ pytest>=7.4.0
 rapidfuzz>=3.6.0
 requests>=2.31.0
 sounddevice>=0.4.6
+sse-starlette>=1.6.0
 tomli>=2.0.1
 torch>=2.4.0
 transformers>=4.45.0
+uvicorn[standard]>=0.24.0
 vllm>=0.6.0
 websockets>=11.0.0
