fix(#898): brace-balancing guard for truncated LLM JSON output
- Add balance_truncated_json() in json_protocol.py: appends minimal
  closing chars (", ], }) when max_tokens truncates JSON mid-stream
- Wire into _parse_json pipeline as step between first-parse failure
  and repair_common_json_issues
- Fix model-settings.yaml: remove dangerous stop_sequences that cut
  JSON at first } character (config is documentation-only, but prevents
  future misuse if code ever reads it)

Closes #898

--- a/config/model-settings.yaml
+++ b/config/model-settings.yaml
@@ -66,8 +66,13 @@ router:
   max_tokens: 256   # Issue #418: increased from 128 to avoid JSON truncation with slim schema
   top_p: 1.0
   stop_sequences:
-    - "}"
-    - "\n\n"
+    # IMPORTANT: Never use "}" alone as a stop sequence — it truncates JSON
+    # at the first nested closing brace instead of the root object's.
+    # The actual stop tokens are hardcoded in llm_router.py for safety.
+    # These are kept here for documentation only.
+    - "\nUSER:"
+    - "\n\nUSER:"
+    - "\n---"
   
   # Prompt budget
   max_system_prompt_tokens: 500
