harden: review fixes for #898, #889, #893
#898 balance guard:
  - Only attempt brace-balancing if text contains '{' (skip smalltalk)
  - Balanced JSON MUST pass schema validation (repair_router_output);
    if is_valid_after=False, fall through to repair_common_json_issues
    instead of returning semantically broken JSON

#889 boost floor:
  - _BOOST_FLOOR now reads from BANTZ_ROUTER_BOOST_FLOOR env (default 0.3)
  - Added boost_floor key to model-settings.yaml for documentation

#893 tool results:
  - result_raw capped: lists >50 items truncated to first 50
  - get_context_for_llm() excludes result_raw — only sends lightweight
    result_summary to the LLM (saves context window budget)
  - Prevents payload bloat in logs/API debug dumps

--- a/config/model-settings.yaml
+++ b/config/model-settings.yaml
@@ -65,6 +65,7 @@ router:
   temperature: 0.0  # Deterministic routing
   max_tokens: 256   # Issue #418: increased from 128 to avoid JSON truncation with slim schema
   top_p: 1.0
+  boost_floor: 0.3  # Issue #889: min confidence to allow auto-boost (env: BANTZ_ROUTER_BOOST_FLOOR)
   stop_sequences:
     # IMPORTANT: Never use "}" alone as a stop sequence — it truncates JSON
     # at the first nested closing brace instead of the root object's.
