fix: correct Gmail install hint to .[google] extra (#910)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,11 @@ calendar = [
 	"google-auth-oauthlib>=1.0.0",
 	"google-api-python-client>=2.0.0",
 ]
+google = [
+	"google-auth>=2.0.0",
+	"google-auth-oauthlib>=1.0.0",
+	"google-api-python-client>=2.0.0",
+]
 voice = [
 	"requests>=2.31.0",
 	"numpy>=1.24.0",
