--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
 	"requests>=2.31.0",
 	"openai>=1.40.0",
 	"pydantic>=2.0.0",
+	"aiohttp>=3.9.0",
 ]
 
 [project.optional-dependencies]
@@ -50,6 +51,7 @@ voice = [
 	"pynput>=1.7.6",
 	"rapidfuzz>=3.6.0",
 	"openwakeword>=0.6.0",
+	"vosk>=0.3.45",
 ]
 system = [
 	"dbus-next>=0.2.3",
@@ -105,6 +107,7 @@ all = [
 	"pynput>=1.7.6",
 	"rapidfuzz>=3.6.0",
 	"openwakeword>=0.6.0",
+	"vosk>=0.3.45",
 	# system/ui/vision/security
 	"dbus-next>=0.2.3",
 	"PyQt5>=5.15.0",
@@ -115,6 +118,8 @@ all = [
 	"pytesseract>=0.3.10",
 	"google-auth>=2.0.0",
 	"cryptography>=42.0.0",
+	# async http
+	"aiohttp>=3.9.0",
 ]
 
 [project.scripts]
