epic(test): Test pyramid — golden path E2E + regression suite (#1226)
- Add golden_path marker + --run-golden-path CLI option to conftest
- 14 golden path E2E tests (calendar, inbox, failure modes)
- 10 regression tests covering top 5 recurring bugs:
  * Turkish anaphora token set completeness
  * Finalizer context overflow protection
  * Period-of-day time extraction (sabah/akşam)
  * Turkish İ lowering + fuzzy mail match
  * Calendar #N reference resolution

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,5 +7,6 @@ markers =
     integration: marks integration tests that may require external services (run with --run-integration)
     benchmark: marks performance benchmark tests (run with --run-benchmark)
     regression: marks regression tests for CI (run with --run-regression)
+    golden_path: marks golden path E2E tests — must pass before merge (run with --run-golden-path)
     e2e: marks end-to-end tests with mock LLM (run with pytest tests/e2e/)
 asyncio_mode = auto
