feat(brain): structured tool calling via Ollama native tools API (#1274)
Issue #1274: Structured Tool Calling — uses Ollama's native /v1/chat/completions
tools parameter for reliable tool selection, bypassing ~800 lines of JSON repair.

Changes:
- LLMResponse: Add tool_calls field (list[LLMToolCall]) for structured responses
- LLMToolCall: New dataclass (id, name, arguments) in llm/base.py
- VLLMOpenAIClient: Add tools/tool_choice params to chat(), chat_detailed(),
  _do_chat_request(); parse choice.message.tool_calls; new chat_with_tools()
- ToolRegistry: Add as_openai_tools() and as_openai_tools_for_route() for
  generating OpenAI-format tool schemas from existing Tool definitions
- JarvisLLMOrchestrator: Add _try_structured_tool_call() dual-path in route(),
  _extract_from_tool_calls() to build OrchestratorOutput directly from
  tool_calls, _infer_intent_from_tool() for calendar/gmail intent derivation
- Feature flag: BANTZ_STRUCTURED_TOOLS=1 enables structured path (default off)
- Fallback: when structured call fails or returns text, legacy JSON parse runs
- Config: env example + doctor.py updated

Tests: 46 new tests in test_structured_tool_calling.py — all pass
Regression: 0 new failures (14 pre-existing identical on dev)

--- a/config/bantz-env.example
+++ b/config/bantz-env.example
@@ -237,6 +237,11 @@ BANTZ_BRIEFING_HOUR=08
 # BANTZ_BRIDGE_LOG=0                       # Log every translation (debug)
 
 
+# ─── Structured Tool Calling (Issue #1274) ───────────────────────
+# Use Ollama's native tools API instead of JSON-from-text parsing.
+# Eliminates ~800 lines of JSON repair code when enabled.
+# BANTZ_STRUCTURED_TOOLS=0                 # Master switch (1=on, 0=off)
+
 # ─── Debug ───────────────────────────────────────────────────────
 # BANTZ_DEBUG=0                            # Enable debug mode (1=on)
 # BANTZ_DEBUG_TIERS=0                      # Tier-specific debug logging
