feat(policy): Policy Engine v2 — Risk Tiers + Presets + Redact + Param Edit (#1291)
- Add PolicyEngineV2 with RiskTier enum (LOW/MED/HIGH) and 3 presets
  (paranoid/balanced/autopilot)
- Implement redact_sensitive() for per-tool param masking with global
  sensitive keys + YAML-configured per-tool fields
- Add editable_fields support for HIGH-risk tool param editing before
  execution
- Session permits: MED-risk confirm-once-per-session semantics
- Backward compat bridges: tier_from_tool_risk(), tier_to_risk_level()
- Wire into SafetyGuard.evaluate_policy() + OrchestratorLoop auto-init
- Update config/permissions.yaml with redact_fields + editable_fields
- 49 tests across 18 test classes covering all presets, redaction,
  session mgmt, backward compat, config loading, integration

--- a/config/permissions.yaml
+++ b/config/permissions.yaml
@@ -125,3 +125,66 @@ permissions:
     action: "*"
     risk: "medium"
     decision: "confirm"
+
+
+# ── Redact Fields (Issue #1291) ──────────────────────────────
+# Per-tool sensitive parameter fields to mask in confirmation UI.
+# Global keys (password, api_key, token, secret, etc.) are ALWAYS
+# redacted regardless of this config.
+
+redact_fields:
+  gmail.send:
+    - password
+    - api_key
+    - token
+    - refresh_token
+  gmail.send_draft:
+    - password
+    - token
+  gmail.send_to_contact:
+    - password
+    - token
+  system.execute_command:
+    - env_vars
+    - environment
+  calendar.create_event: []
+  calendar.update_event: []
+  calendar.delete_event: []
+  "browser.*":
+    - cookie
+    - authorization
+
+
+# ── Editable Fields (Issue #1291) ────────────────────────────
+# Per-tool fields that users may edit before confirming (HIGH risk only).
+# Fields listed here appear as "[DÜZENLENEBİLİR]" in the confirmation UI.
+
+editable_fields:
+  calendar.delete_event:
+    - notify_attendees
+  calendar.create_event:
+    - title
+    - description
+    - start_time
+    - end_time
+    - attendees
+  calendar.update_event:
+    - title
+    - description
+    - start_time
+    - end_time
+    - attendees
+  gmail.send:
+    - subject
+    - body
+    - to
+    - cc
+    - bcc
+  gmail.send_to_contact:
+    - subject
+    - body
+  gmail.send_draft:
+    - subject
+    - body
+  system.execute_command:
+    - command
