feat(google): unified OAuth + Contacts/Tasks/Keep/Classroom connectors
Implements #1292 — Google Suite Super-Connector EPIC:

- GoogleAuthManager: single refresh token, incremental scope expansion,
  atomic file writes with fcntl, legacy token migration
- GoogleConnector ABC + ToolSchema descriptor for consistent tool registration
- ContactsConnector: search, get, create via People API (3 tools)
- TasksConnector: list, create, complete, delete (4 tools)
- KeepConnector: list, create, search with graceful degradation (3 tools)
- ClassroomConnector: list courses, coursework, submissions (3 tools)
- GoogleEntityLinker: attendee→contact, task→event fuzzy matching
- Auth bridges in legacy auth.py / gmail_auth.py for backward compat
- Tool registration in register_all.py with permission rules
- Updated consent_wizard.py with Tasks + Classroom services
- 63 tests covering all components

Closes #1292

--- a/config/permissions.yaml
+++ b/config/permissions.yaml
@@ -120,6 +120,61 @@ permissions:
     risk: "medium"
     decision: "confirm"
 
+  # ── Google Suite Connectors (Issue #1292) ───────────────────
+  - tool: "google.contacts.search"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "google.contacts.get"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "google.contacts.create"
+    action: "write"
+    risk: "medium"
+    decision: "confirm"
+
+  - tool: "google.tasks.list"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "google.tasks.create"
+    action: "write"
+    risk: "medium"
+    decision: "confirm"
+    conditions:
+      max_per_day: 30
+
+  - tool: "google.tasks.complete"
+    action: "write"
+    risk: "medium"
+    decision: "confirm"
+
+  - tool: "google.tasks.delete"
+    action: "delete"
+    risk: "high"
+    decision: "confirm"
+    conditions:
+      max_per_day: 10
+
+  - tool: "google.keep.*"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "google.keep.create"
+    action: "write"
+    risk: "medium"
+    decision: "confirm"
+
+  - tool: "google.classroom.*"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
   # ── Catch-all (unknown tools) ──────────────────────────────
   - tool: "*"
     action: "*"
