feat(proactive): Proactive Secretary Engine — signals + rules + daily brief
Implements #1293 — Proactive Secretary Engine EPIC:

- SignalCollector: parallel async collection from Calendar, Email,
  Weather, Tasks, News with per-source error isolation
- Signal data models: CalendarSignal, EmailSignal, WeatherSignal,
  TaskSignal, NewsSignal, DailySignals, FreeSlot
- ProactiveRuleEngine: 7 built-in rules (rain, RSVP, deadline,
  free slot, urgent mail, high unread, overdue tasks) + LLM callback
- DailyBriefGenerator: composable formatted Turkish brief with
  calendar, email, weather, tasks, news sections + suggestions
- DeliveryChannel ABC: TerminalDelivery, DesktopNotificationDelivery,
  EventBusDelivery, CallbackDelivery
- config/proactive.yaml: declarative YAML config for scheduler,
  signals, rules, delivery channels, work hours
- Engine integration: _init_secretary() on ProactiveEngine init,
  YAML config loading, signal_collector/rule_engine/brief_generator
  properties
- Proactive tools: proactive.daily_brief (on-demand brief) +
  proactive.status (engine status) registered in register_all.py
- 67 new tests (signals, rules, brief, delivery, engine integration)
- 93 existing proactive engine tests still pass (no regressions)

Closes #1293

--- a/config/permissions.yaml
+++ b/config/permissions.yaml
@@ -175,6 +175,17 @@ permissions:
     risk: "low"
     decision: "allow"
 
+  # ── Proactive Secretary (Issue #1293) ──────────────────────
+  - tool: "proactive.daily_brief"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "proactive.status"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
   # ── Catch-all (unknown tools) ──────────────────────────────
   - tool: "*"
     action: "*"
