feat(messaging): kontrollü mesajlaşma pipeline — read → draft → confirm → send
Issue #1294: Kanal-bağımsız mesajlaşma katmanı.

Yeni modül: src/bantz/messaging/
- models.py: Message, Draft, DraftBatch, SendResult, Conversation
- channel.py: ChannelConnector ABC — kanal-bağımsız interface
- gmail_channel.py: GmailChannel — mevcut gmail backend adaptörü
- pipeline.py: MessagingPipeline — read → draft → confirm → send
- thread_tracker.py: ThreadTracker — cross-channel conversation + LLM özet
- batch.py: BatchDraftManager — toplu taslak oluşturma ve gönderim

Tool registration (register_all.py):
- messaging.read_inbox — kanal bazlı mesaj okuma
- messaging.draft_reply — taslak yanıt oluşturma
- messaging.send — policy engine onaylı mesaj gönderimi (HIGH risk)
- messaging.thread — yazışma geçmişi + özet
- messaging.status — pipeline durumu

Config:
- permissions.yaml: messaging.* tool izinleri
- editable_fields: messaging.send düzenlenebilir alanlar

Tests: 65 test (models, channel, gmail adapter, pipeline, tracker, batch, registration, integration)
Closes #1294

--- a/config/permissions.yaml
+++ b/config/permissions.yaml
@@ -186,6 +186,32 @@ permissions:
     risk: "low"
     decision: "allow"
 
+  # ── Messaging Pipeline (#1294) ─────────────────────────────
+  - tool: "messaging.read_inbox"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "messaging.draft_reply"
+    action: "write"
+    risk: "medium"
+    decision: "allow"
+
+  - tool: "messaging.send"
+    action: "write"
+    risk: "high"
+    decision: "confirm"
+
+  - tool: "messaging.thread"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "messaging.status"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
   # ── Catch-all (unknown tools) ──────────────────────────────
   - tool: "*"
     action: "*"
@@ -254,3 +280,9 @@ editable_fields:
     - body
   system.execute_command:
     - command
+  messaging.send:
+    - to
+    - subject
+    - body
+    - cc
+    - bcc
