feat(agent): PC Agent + CodingAgent — sandbox execution + safety guardrails (#1295)
- SandboxExecutor: firejail/docker/none modes, dry-run simulation,
  checkpoint/rollback mechanism, timeout enforcement, env sanitisation
- SafetyGuardrails: 3-tier pattern engine (blocked → dry_run_first → confirm),
  15 blocked patterns (rm -rf /, fork bomb, curl|sh, shutdown, etc.),
  8 dry-run-required, 6 confirmation-required patterns, extensible
- PCAgent: list/search/organize files, file_info, launch_app,
  clipboard get/set (xclip), system_info (psutil)
- CodingAgent: LLM code generation + syntax check, write_tests (LLM/skeleton),
  run_tests (sandbox pytest), git_status/diff/commit/log, code_review
- 21 tools registered: sandbox.{execute,dry_run,rollback,checkpoints},
  safety.check, pc.{list_files,search_files,file_info,organize_files,
  launch_app,clipboard_get,clipboard_set,system_info},
  coding.{generate,write_tests,run_tests,git_status,git_diff,git_commit,
  git_log,review}
- config/sandbox.yaml: execution mode, timeouts, safety, agent settings
- permissions.yaml: 21 new tool permission entries with risk levels
- 99 tests, all passing

--- a/config/permissions.yaml
+++ b/config/permissions.yaml
@@ -212,6 +212,117 @@ permissions:
     risk: "low"
     decision: "allow"
 
+  # ── Sandbox Agents (Issue #1295) ───────────────────────────
+  - tool: "sandbox.execute"
+    action: "execute"
+    risk: "high"
+    decision: "confirm"
+    conditions:
+      max_per_day: 100
+      max_per_session: 30
+
+  - tool: "sandbox.dry_run"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "sandbox.rollback"
+    action: "execute"
+    risk: "medium"
+    decision: "confirm"
+
+  - tool: "sandbox.checkpoints"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "safety.check"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "pc.list_files"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "pc.search_files"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "pc.file_info"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "pc.organize_files"
+    action: "write"
+    risk: "medium"
+    decision: "confirm"
+
+  - tool: "pc.launch_app"
+    action: "execute"
+    risk: "medium"
+    decision: "confirm"
+
+  - tool: "pc.clipboard_get"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "pc.clipboard_set"
+    action: "write"
+    risk: "medium"
+    decision: "confirm"
+
+  - tool: "pc.system_info"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "coding.generate"
+    action: "write"
+    risk: "medium"
+    decision: "allow"
+
+  - tool: "coding.write_tests"
+    action: "write"
+    risk: "medium"
+    decision: "allow"
+
+  - tool: "coding.run_tests"
+    action: "execute"
+    risk: "medium"
+    decision: "allow"
+
+  - tool: "coding.git_status"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "coding.git_diff"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "coding.git_commit"
+    action: "write"
+    risk: "high"
+    decision: "confirm"
+    conditions:
+      max_per_day: 50
+
+  - tool: "coding.git_log"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "coding.review"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
   # ── Catch-all (unknown tools) ──────────────────────────────
   - tool: "*"
     action: "*"
@@ -286,3 +397,10 @@ editable_fields:
     - body
     - cc
     - bcc
+  sandbox.execute:
+    - command
+    - workdir
+    - timeout
+    - dry_run
+  coding.git_commit:
+    - message
