feat(music): implement music control — Spotify/Local Player + context-aware suggestions
Issue #1296: Müzik Kontrolü

- MusicPlayer ABC with Track, Playlist, PlayerState models
- SpotifyPlayer: MPRIS2 via playerctl + Spotify Web API (search/playlists)
- LocalPlayer: VLC, mpv, Rhythmbox via playerctl (MPRIS2)
- MusicSuggester: calendar moods (26 keywords incl. Turkish) + time-of-day
- 11 tools registered: play, pause, resume, next, prev, stop, volume,
  status, search, playlists, suggest
- config/music.yaml: player settings + suggestion mappings
- permissions.yaml: 12 music.* permission entries
- 76 tests: models, both players, suggester, tool registration, config

Closes #1296

--- a/config/permissions.yaml
+++ b/config/permissions.yaml
@@ -323,6 +323,62 @@ permissions:
     risk: "low"
     decision: "allow"
 
+  # ── Music Control (Issue #1296) ────────────────────────────
+  - tool: "music.play"
+    action: "execute"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "music.pause"
+    action: "execute"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "music.resume"
+    action: "execute"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "music.next"
+    action: "execute"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "music.prev"
+    action: "execute"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "music.stop"
+    action: "execute"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "music.volume"
+    action: "execute"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "music.status"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "music.search"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "music.playlists"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "music.suggest"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
   # ── Catch-all (unknown tools) ──────────────────────────────
   - tool: "*"
     action: "*"
